--- a/views/components/aspectratio/aspectratio.templ
+++ b/views/components/aspectratio/aspectratio.templ
@@ -1,7 +1,7 @@
 // templui component aspectratio - version: v0.84.0 installed by templui v0.84.0
 package aspectratio
 
-import "awesome-go/views/utils"
+import "awesome-go/internal/utils"
 
 type Ratio string
 
