--- a/views/components/button/button.templ
+++ b/views/components/button/button.templ
@@ -43,6 +43,7 @@ type Props struct {
 	Target     string
 	Disabled   bool
 	Type       Type
+	HXDelete   string
 }
 
 templ Button(props ...Props) {
@@ -99,6 +100,9 @@ templ Button(props ...Props) {
 			}
 			if p.Type != "" {
 				type={ string(p.Type) }
+			}
+			if p.HXDelete != "" {
+				hx-delete={ p.HXDelete }
 			}
 			disabled?={ p.Disabled }
 			{ p.Attributes... }
