Use the new form!

--- a/views/todos.templ
+++ b/views/todos.templ
@@ -102,7 +102,7 @@ templ TodoDrawer() {
 		@card.Card() {
 			@card.Content() {
 				<div class="flex flex-col gap-4">
-					@TodoForm()
+					@TodoForm(types.TodoForm{})
 				</div>
 			}
 		}
