--- a/views/todos.templ
+++ b/views/todos.templ
@@ -2,6 +2,7 @@ package views
 
 import (
 	"awesome-go/internal/models"
+	"awesome-go/internal/types"
 	"awesome-go/views/components/button"
 	"awesome-go/views/components/card"
 	"awesome-go/views/components/drawer"
